# MDNPPackage

./: #setup.py#  .#new.txt  .#setup.py  .gitignore  .travis.yml  .travis.yml~  CONTRIBUTING.rst  Dockerfile  Documentation.aux  Documentation.bib  Documentation.tex  HISTORY.rst  Jenkinsfile  Jenkinsfile~  LICENSE  NP.gro  NP.itp  ProposedFlowchart.py  README.md  README.org  README.rst  Schema.ipe  genConf.py  insane.py  main.py  pyproject.toml  requirements.txt  schema.eps  setup.py  tox.ini
MDNPPackage/: __main__.py  main.py
docs/: #Documentation.bib#  #Documentation.tex#  .#Documentation.bib  Documentation.aux  Documentation.bbl  Documentation.bib  Documentation.blg  Documentation.tex  conf.py  schema.eps  schema.ipe  updates.txt  updates.txt~
notebooks/: #MartiniStripedNew.gro.1#  #minimized.gro.1#  #minimized.gro.2#  #minimized.gro.3#  #minimized.gro.4#  #new.edr.1#  #new.edr.2#  #new.log.1#  #new.log.2#  #new.tpr.1#  #new.tpr.2#  #new.tpr.3#  #new.tpr.4#  #new.trr.1#  #new.trr.2#  #new.trr.3#  #new.trr.4#  MARTININP.xyz  MartiniStriped.gro  MartiniStriped.gro~  MartiniStriped.xyz  MartiniStripedNew.gro  MartiniStripedNew.gro~  Martini_NP_construction_notebook.ipynb  Martini_NP_construction_notebook.py  Martini_bead_matching_notebook.ipynb  NPExample.xyz  NPExample.xyz~  NPITPGENERATOR.ipynb  NPTest.itp  NPTest.itp~  NP_Construction.ipynb  RDKIT_Testing_Functions.ipynb  RDKit_Practise.ipynb  Untitled.ipynb  c70.mol  ex.py  ex.py~  file.xyz  final.xyz  (+14 more)
py_package_template.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python_boilerplate/: .travis.yml  setup.py
(+189 files in other folders)
