# pyproject.toml tells frontend build tools like pip and build
# what "backend" tool to use to create distribution packages
# for your project

# You can choose from a number of backends
[build-system]
requires = ["setuptools >= 61.0"] 
build-backend = "setuptools.build_meta"

# Configuring metadata
[project]
name = "sang" # distribution name of your package
version = "0.0.1" # this is the package version 
authors = [
{ name = "Sang Young Noh", email = "sangyoung123@googlemail.com" },
] # Authors is used to identify the author of the package 
description = "Python package to create simulation templates for Nanoparticle mixed simulations" # one sentence summary of the package 
readme = "README.md" # path to a file containing a detailed description of the package
license = { file = "LICENSE" } # path to the LICENSE FILE
requires-python = ">= 3.7" # gives the versions of Python supported by your project 
# classifiers gives the index and pip some additional metadata about your package.
# In this case, it shows that
# - the package is only compatible with Python 3
# - is licensed under the MIT licene
# - is OS independent
classifiers = [
	    "Programming Language :: Python :: 3",
	    "License :: OSI Approved :: MIT Licene",
	    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "http://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.pytest.ini_options]
pythonpath = [
"."
]